--- a/Views/Admin/Graficos.cshtml
+++ b/Views/Admin/Graficos.cshtml
@@ -17,13 +17,13 @@
             <div class="col-12 d-flex no-block align-items-center">
                 <h4 class="page-title">Graficos</h4>
                 @*<div class="ml-auto text-right">
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Library</li>
-                        </ol>
-                    </nav>
-                </div>*@
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Library</li>
+                            </ol>
+                        </nav>
+                    </div>*@
             </div>
         </div>
     </div>
@@ -42,11 +42,11 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Real Time Chart</h5>
+                        <h5 class="card-title">Grafico em tempo real</h5>
                         <div id="real-time" style="height:400px;"></div>
                         <p>
-                            Time between updates:
-                            <input id="updateInterval" type="text" value="" style="text-align: right; width:5em"> milliseconds
+                            tempo entre as atualizações:
+                            <input id="updateInterval" type="text" value="" style="text-align: right; width:5em"> milisegundos
                         </p>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Turning-series chart</h5>
+                        <h5 class="card-title">Grafico de linhas</h5>
                         <div id="placeholder" style="height: 400px;"></div>
                         <p id="choices" class="m-t-20"></p>
                     </div>
@@ -82,7 +82,7 @@
                         </div>
                         <div class="col-md-6 border-left text-center p-t-10">
                             <h3 class="mb-0 font-weight-bold">150</h3>
-                            <span class="text-muted">New Users</span>
+                            <span class="text-muted">Novos usuários</span>
                         </div>
                     </div>
                 </div>
@@ -100,8 +100,8 @@
                             </div>
                         </div>
                         <div class="col-md-6 border-left text-center p-t-10">
-                            <h3 class="mb-0 font-weight-bold">4560</h3>
-                            <span class="text-muted">Orders</span>
+                            <h3 class="mb-0 font-weight-bold">100</h3>
+                            <span class="text-muted">Cursos</span>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                         </div>
                         <div class="col-md-6 border-left text-center p-t-10">
                             <h3 class="mb-0 ">5672</h3>
-                            <span class="text-muted">Active Users</span>
+                            <span class="text-muted">Usuários ativos</span>
                         </div>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                         </div>
                         <div class="col-md-6 border-left text-center p-t-10">
                             <h3 class="mb-0 font-weight-bold">2560</h3>
-                            <span class="text-muted">Register</span>
+                            <span class="text-muted">Registros</span>
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Bar Chart</h5>
+                        <h5 class="card-title">Graficos em linha</h5>
                         <div class="flot-chart">
                             <div class="flot-chart-content" id="flot-line-chart"></div>
                         </div>
@@ -162,7 +162,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Pie Chart</h5>
+                        <h5 class="card-title">Grafico de pizza</h5>
                         <div class="pie" style="height: 400px;"></div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Line Chart</h5>
+                        <h5 class="card-title">Grafico de colunas</h5>
                         <div class="bars" style="height: 400px;"></div>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
     <!-- footer -->
     <!-- ============================================================== -->
     <footer class="footer text-center">
-        All Rights Reserved by Matrix-admin. Designed and Developed by 
+        All Rights Reserved by Matrix-admin. Designed and Developed by
         <a href="https://wrappixel.com">WrapPixel</a>.
     </footer>
     <!-- ============================================================== -->
@@ -208,4 +208,3 @@
 <!-- ============================================================== -->
 <!-- End Wrapper -->
 <!-- ============================================================== -->
-
