--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -14,12 +14,12 @@
     <div class="page-breadcrumb">
         <div class="row">
             <div class="col-12 d-flex no-block align-items-center">
-                <h4 class="page-title">Dashboard</h4>
+                <h4 class="page-title">Painel de controle</h4>
                 <div class="ml-auto text-right">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Library</li>
+                            @*<li class="breadcrumb-item"><a href="#">Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Library</li>*@
                         </ol>
                     </nav>
                 </div>
@@ -152,11 +152,11 @@
                             </div>
                             <div class="col-lg-3">
                                 <div class="row">
-                                    <div class="col-6">
+                                    <div class="col-6 ">
                                         <div class="bg-dark p-10 text-white text-center">
-                                            <i class="fa fa-user m-b-5 font-16"></i>
-                                            <h5 class="m-b-0 m-t-5">2540</h5>
-                                            <small class="font-light">Total de usuários</small>
+                                            <i class="fa fa-globe m-b-5 font-16"></i>
+                                            <h5 class="m-b-0 m-t-5">2000</h5>
+                                            <small class="font-light">Usuários onlines</small>
                                         </div>
                                     </div>
                                     <div class="col-6">
@@ -169,8 +169,8 @@
                                     <div class="col-6 m-t-15">
                                         <div class="bg-dark p-10 text-white text-center">
                                             <i class="fa fa-cart-plus m-b-5 font-16"></i>
-                                            <h5 class="m-b-0 m-t-5">656</h5>
-                                            <small class="font-light">Total de compra do premium</small>
+                                            <h5 class="m-b-0 m-t-5">1200</h5>
+                                            <small class="font-light">Total compras do premium</small>
                                         </div>
                                     </div>
                                     <div class="col-6 m-t-15">
@@ -184,14 +184,14 @@
                                         <div class="bg-dark p-10 text-white text-center">
                                             <i class="fa fa-table m-b-5 font-16"></i>
                                             <h5 class="m-b-0 m-t-5">100</h5>
-                                            <small class="font-light">Pending Orders</small>
+                                            <small class="font-light">Total de cursos</small>
                                         </div>
                                     </div>
                                     <div class="col-6 m-t-15">
                                         <div class="bg-dark p-10 text-white text-center">
-                                            <i class="fa fa-globe m-b-5 font-16"></i>
-                                            <h5 class="m-b-0 m-t-5">8540</h5>
-                                            <small class="font-light">Online Orders</small>
+                                            <i class="fa fa-user m-b-5 font-16"></i>
+                                            <h5 class="m-b-0 m-t-5">2540</h5>
+                                            <small class="font-light">Total de usuários</small>
                                         </div>
                                     </div>
                                 </div>
