--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
                         <li>@Html.ActionLink("Cursos", "Cursos", "Cursoes")</li>
                         <li></li>
                         <li id="icon"><a href=""><i class="icofont-alarm" style="font-size: 24px;"></i></a></li>
-                        <li class="drop-down">
+                        <li id="log" class="drop-down">
                             <a href="" class="p-0 m-0">
                                 <span class="top-bar-profile-picture">
                                     <img src="~/assets/img/Usuarios/mini_@User.Identity.Name.Split('|')[2]" />
