--- a/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/Views/Shared/_LayoutPageAdmin.cshtml
@@ -278,36 +278,36 @@
                             </li>
                             <li class="sidebar-item">
                                 <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false">
-                                    <i class="mdi mdi-receipt"></i><span class="hide-menu">Cadastrar </span>
+                                    <i class="mdi mdi-account-card-details"></i><span class="hide-menu">Cadastrar </span>
                                 </a>
                                 <ul aria-expanded="false" class="collapse  first-level">
                                     <li class="sidebar-item">
                                         <a href="~/Admin/UsuarioCreate" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon"></i>
+                                            <i class="mdi mdi-account"></i>
                                             <span class="hide-menu"> Usuários </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/CursoCreate" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon-cool"></i>
+                                            <i class="mdi mdi-certificate"></i>
                                             <span class="hide-menu"> Cursos </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/ModuloCreate" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon"></i>
+                                            <i class="mdi mdi-view-module"></i>
                                             <span class="hide-menu"> Módulos </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/ConteudoCreate" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon-cool"></i>
+                                            <i class="mdi mdi-book-open-page-variant"></i>
                                             <span class="hide-menu"> Conteúdos </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/AnexoCreate" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon"></i>
+                                            <i class="mdi mdi-attachment"></i>
                                             <span class="hide-menu"> Anexos </span>
                                         </a>
                                     </li>
@@ -319,19 +319,19 @@
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/UsuHasCurCreate" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon"></i>
+                                            <i class="mdi mdi-laptop-chromebook"></i>
                                             <span class="hide-menu"> Cursos do usuário </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/UsuHasCurHasContCreate" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon-cool"></i>
+                                            <i class="mdi mdi-chart-areaspline"></i>
                                             <span class="hide-menu"> Aproveitamento por conteúdo </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/UsuHasCurHasContHasQueCreate" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon"></i>
+                                            <i class="mdi mdi-chart-areaspline"></i>
                                             <span class="hide-menu"> Aproveitamento por exercício </span>
                                         </a>
                                     </li>
@@ -339,144 +339,68 @@
                             </li>
                             <li class="sidebar-item">
                                 <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false">
-                                    <i class="mdi mdi-face"></i><span class="hide-menu">Listar</span>
+                                    <i class="mdi mdi-view-list"></i><span class="hide-menu">Listar</span>
                                 </a>
                                 <ul aria-expanded="false" class="collapse  first-level">
                                     <li class="sidebar-item">
                                         <a href="~/Admin/UsuarioIndex" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon"></i>
+                                            <i class="mdi mdi-account"></i>
                                             <span class="hide-menu"> Usuários </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/CursoIndex" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon-cool"></i>
+                                            <i class="mdi mdi-certificate"></i>
                                             <span class="hide-menu"> Cursos </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/ModuloIndex" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon"></i>
+                                            <i class="mdi mdi-view-module"></i>
                                             <span class="hide-menu"> Módulos </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/ConteudoIndex" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon-cool"></i>
+                                            <i class="mdi mdi-book-open-page-variant"></i>
                                             <span class="hide-menu"> Conteúdos </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/AnexoIndex" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon"></i>
+                                            <i class="mdi mdi-attachment"></i>
                                             <span class="hide-menu"> Anexos </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/QuestaoIndex" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon-cool"></i>
+                                            <i class="mdi mdi-clipboard-check"></i>
                                             <span class="hide-menu"> Questões e Alternativas </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/UsuHasCurIndex" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon"></i>
+                                            <i class="mdi mdi-laptop-chromebook"></i>
                                             <span class="hide-menu"> Cursos do usuário </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/UsuHasCurHasContIndex" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon-cool"></i>
+                                            <i class="mdi mdi-chart-areaspline"></i>
                                             <span class="hide-menu"> Aproveitamento por conteúdo </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/UsuHasCurHasContHasQueIndex" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon"></i>
+                                            <i class="mdi mdi-chart-areaspline"></i>
                                             <span class="hide-menu"> Aproveitamento por exercício </span>
                                         </a>
                                     </li>
                                 </ul>
                             </li>
                             <li class="sidebar-item">
-                                <a class="sidebar-link waves-effect waves-dark sidebar-link" href="tables.html" aria-expanded="false">
-                                    <i class="mdi mdi-border-inside"></i>
-                                    <span class="hide-menu">Tables</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-item">
-                                <a class="sidebar-link waves-effect waves-dark sidebar-link" href="grid.html" aria-expanded="false">
-                                    <i class="mdi mdi-blur-linear"></i>
-                                    <span class="hide-menu">Full Width</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-item">
-                                <a class="sidebar-link waves-effect waves-dark sidebar-link" href="pages-buttons.html" aria-expanded="false">
-                                    <i class="mdi mdi-relative-scale"></i>
-                                    <span class="hide-menu">Buttons</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-item">
-                                <a class="sidebar-link waves-effect waves-dark sidebar-link" href="pages-elements.html" aria-expanded="false">
-                                    <i class="mdi mdi-pencil"></i>
-                                    <span class="hide-menu">Elements</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-item">
                                 <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false">
-                                    <i class="mdi mdi-move-resize-variant"></i>
-                                    <span class="hide-menu">Addons </span>
-                                </a>
-                                <ul aria-expanded="false" class="collapse  first-level">
-                                    <li class="sidebar-item">
-                                        <a href="index2.html" class="sidebar-link">
-                                            <i class="mdi mdi-view-dashboard"></i>
-                                            <span class="hide-menu"> Dashboard-2 </span>
-                                        </a>
-                                    </li>
-                                    <li class="sidebar-item">
-                                        <a href="pages-gallery.html" class="sidebar-link">
-                                            <i class="mdi mdi-multiplication-box"></i>
-                                            <span class="hide-menu"> Gallery </span>
-                                        </a>
-                                    </li>
-                                    <li class="sidebar-item">
-                                        <a href="pages-calendar.html" class="sidebar-link">
-                                            <i class="mdi mdi-calendar-check"></i>
-                                            <span class="hide-menu"> Calendar </span>
-                                        </a>
-                                    </li>
-                                    <li class="sidebar-item">
-                                        <a href="pages-invoice.html" class="sidebar-link">
-                                            <i class="mdi mdi-bulletin-board"></i>
-                                            <span class="hide-menu"> Invoice </span>
-                                        </a>
-                                    </li>
-                                    <li class="sidebar-item">
-                                        <a href="pages-chat.html" class="sidebar-link">
-                                            <i class="mdi mdi-message-outline"></i>
-                                            <span class="hide-menu"> Chat Option </span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="sidebar-item">
-                                <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-account-key"></i><span class="hide-menu">Authentication </span></a>
-                                <ul aria-expanded="false" class="collapse  first-level">
-                                    <li class="sidebar-item">
-                                        <a href="authentication-login.html" class="sidebar-link">
-                                            <i class="mdi mdi-all-inclusive"></i><span class="hide-menu"> Login </span>
-                                        </a>
-                                    </li>
-                                    <li class="sidebar-item">
-                                        <a href="authentication-register.html" class="sidebar-link">
-                                            <i class="mdi mdi-all-inclusive"></i><span class="hide-menu"> Register </span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="sidebar-item">
-                                <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-alert"></i><span class="hide-menu">Errors </span></a>
+                                <i class="mdi mdi-alert"></i><span class="hide-menu">Erros </span></a>
                                 <ul aria-expanded="false" class="collapse  first-level">
                                     <li class="sidebar-item">
                                         <a href="error-403.html" class="sidebar-link">
