--- a/Views/Admin/AnexoCreate.cshtml
+++ b/Views/Admin/AnexoCreate.cshtml
@@ -13,7 +13,7 @@
 <div class="page-wrapper mt-2">
     <div class="container">
         <h2>Criar anexo</h2>
-        @using (Html.BeginForm())
+        @using (Html.BeginForm("AnexoCreate", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
 
@@ -28,7 +28,7 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                   <div class="form-group">
                     @Html.LabelFor(model => model.DataPostagem, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.DataPostagem, new { htmlAttributes = new { @class = "form-control" } })
@@ -37,10 +37,9 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Url, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Url, htmlAttributes: new { @class = "control-label col-md-12" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Url, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Url, "", new { @class = "text-danger" })
+                        <input name="arq" class="form-control" type="file" />
                     </div>
                 </div>
 
@@ -62,7 +61,7 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Criar" class="btn btn-default" />
+                        <input type="submit" value="AnexoCreate" class="btn btn-default" />
                     </div>
                 </div>
             </div>
