--- a/Views/Admin/AnexoCreate.cshtml
+++ b/Views/Admin/AnexoCreate.cshtml
@@ -28,18 +28,11 @@
                     </div>
                 </div>
 
-                   <div class="form-group">
-                    @Html.LabelFor(model => model.DataPostagem, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.DataPostagem, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.DataPostagem, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
                 <div class="form-group">
                     @Html.LabelFor(model => model.Url, htmlAttributes: new { @class = "control-label col-md-12" })
                     <div class="col-md-10">
                         <input name="arq" class="form-control" type="file" />
+                        @Html.ValidationMessageFor(model => model.Url, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
