--- a/Views/Admin/AnexoEdit.cshtml
+++ b/Views/Admin/AnexoEdit.cshtml
@@ -13,7 +13,10 @@
 <div class="page-wrapper mt-2">
     <div class="container">
         <h2>Editar anexo</h2>
-        @using (Html.BeginForm())
+        @using (Html.BeginForm("AnexoEdit", "Admin", FormMethod.Post, new
+        {
+            enctype = "multipart/form-data"
+        }))
         {
             @Html.AntiForgeryToken()
 
@@ -38,12 +41,13 @@
                     </div>
                 </div>
 
+                <input name="arq" class="form-control" type="file" />
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Url, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Url, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Url, "", new { @class = "text-danger" })
-                    </div>
+                    @Html.LabelFor(model => model.Url, htmlAttributes: new
+                    {
+                        @class =
+                    "control-label col-md-2"
+                    }) 
                 </div>
 
                 <div class="form-group">
