CursoEdit corrigido e Alternativas no admin criado

--- a/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/Views/Shared/_LayoutPageAdmin.cshtml
@@ -313,8 +313,14 @@
                                     </li>
                                     <li class="sidebar-item">
                                         <a href="~/Admin/QuestaoCreate" class="sidebar-link">
-                                            <i class="mdi mdi-emoticon-cool"></i>
-                                            <span class="hide-menu"> Questões e Alternativas </span>
+                                            <i class="mdi mdi-clipboard-check"></i>
+                                            <span class="hide-menu"> Questões </span>
+                                        </a>
+                                    </li>
+                                    <li class="sidebar-item">
+                                        <a href="~/Admin/AlternativasCreate" class="sidebar-link">
+                                            <i class="mdi mdi-check-all"></i>
+                                            <span class="hide-menu"> Alternativas </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
@@ -375,7 +381,13 @@
                                     <li class="sidebar-item">
                                         <a href="~/Admin/QuestaoIndex" class="sidebar-link">
                                             <i class="mdi mdi-clipboard-check"></i>
-                                            <span class="hide-menu"> Questões e Alternativas </span>
+                                            <span class="hide-menu"> Questões </span>
+                                        </a>
+                                    </li>
+                                    <li class="sidebar-item">
+                                        <a href="~/Admin/AlternativasIndex" class="sidebar-link">
+                                            <i class="mdi mdi-check-all"></i>
+                                            <span class="hide-menu"> Alternativas </span>
                                         </a>
                                     </li>
                                     <li class="sidebar-item">
@@ -400,7 +412,8 @@
                             </li>
                             <li class="sidebar-item">
                                 <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false">
-                                <i class="mdi mdi-alert"></i><span class="hide-menu">Erros </span></a>
+                                    <i class="mdi mdi-alert"></i><span class="hide-menu">Erros </span>
+                                </a>
                                 <ul aria-expanded="false" class="collapse  first-level">
                                     <li class="sidebar-item">
                                         <a href="error-403.html" class="sidebar-link">
