--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -51,13 +51,13 @@
                                         if (ane.Tipos.ToString().Equals("Apostila"))
                                         {
                                             <li>
-                                                <button name="PagAula" class="a link" href="~/@ane.Url" onclick="mostraDiv('div1','div2','div_@cont.Id')">@ane.Tipos</button>
+                                                <button name="PagAula" class="a link" href="~/assets/Apostilas/@ane.Url" onclick="mostraDiv('div1','div2','div_@cont.Id')">@ane.Tipos</button>
                                             </li>
                                         }
                                         else
                                         {
                                             <li>
-                                                <button name="PagAula" class="b link" href="~/@ane.Url" onclick="mostraDiv('div2','div1','div_@cont.Id')">@ane.Tipos</button>
+                                                <button name="PagAula" class="b link" href="~/assets/VideoAulas/@ane.Url" onclick="mostraDiv('div2','div1','div_@cont.Id')">@ane.Tipos</button>
                                             </li>
                                         }
                                     }
@@ -93,7 +93,7 @@
     <div id="content">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <button  type="button" id="sidebarCollapse" class="btn btn-info">
+                <button type="button" id="sidebarCollapse" class="btn btn-info">
                     <i class="fas fa-align-left"></i>
                     <span>Conteúdo</span>
                 </button>
