--- a/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/Views/Shared/_LayoutPageAdmin.cshtml
@@ -106,7 +106,7 @@
                             <!-- ============================================================== -->
                             <!-- create new -->
                             <!-- ============================================================== -->
-                            <li class="nav-item dropdown">
+                            @*<li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                    aria-haspopup="true" aria-expanded="false">
                                     <span class="d-none d-md-block">
@@ -123,11 +123,11 @@
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#">Something else here</a>
                                 </div>
-                            </li>
+                            </li>*@
                             <!-- ============================================================== -->
                             <!-- Search -->
                             <!-- ============================================================== -->
-                            <li class="nav-item search-box">
+                            @*<li class="nav-item search-box">
                                 <a class="nav-link waves-effect waves-dark" href="javascript:void(0)"><i class="ti-search"></i></a>
                                 <form class="app-search position-absolute">
                                     <input type="text" class="form-control" placeholder="Search &amp; enter">
@@ -135,7 +135,7 @@
                                         <i class="ti-close"></i>
                                     </a>
                                 </form>
-                            </li>
+                            </li>*@
                         </ul>
                         <!-- ============================================================== -->
                         <!-- Right side toggle and nav items -->
@@ -235,8 +235,8 @@
                                     <a class="dropdown-item" href="javascript:void(0)"><i class="ti-settings m-r-5 m-l-5"></i> Configuração de conta</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="~/Usuarios/sair"><i class="fa fa-power-off m-r-5 m-l-5"></i> Sair</a>
-                                    <div class="dropdown-divider"></div>
-                                    <div class="p-l-30 p-10"><a href="javascript:void(0)" class="btn btn-sm btn-success btn-rounded">Ver perfil</a></div>
+                                    @*<div class="dropdown-divider"></div>*@
+                                    @*<div class="p-l-30 p-10"><a href="javascript:void(0)" class="btn btn-sm btn-success btn-rounded">Ver perfil</a></div>*@
                                 </div>
                             </li>
                             <!-- ============================================================== -->
