--- a/Views/Usuarios/EditarDados.cshtml
+++ b/Views/Usuarios/EditarDados.cshtml
@@ -4,7 +4,7 @@
     @{ ViewBag.Title = "Edit"; }
 
     <h2>Meus dados</h2>
-    @using (Html.BeginForm("Edit", "Usuarios", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("EditarDados", "Usuarios", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
